# gt-ai-gateway

./: .dockerignore  .env.template  .geminiignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  GEMINI.md  README.md  compare_reqs.js  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.worker.config.ts  wrangler.test.toml  wrangler.toml
doc/client_config/: README.md  claude_desktop.md  codex.md  gemini.md  opencode.md
doc/deploy/: CloudflareDeployment.md  DockerDeployment.md  SourceCodeDeployment.md
doc/design/: client_manager_design.md  connection_mode_official_design.md
doc/dev/: BackendDevManual.md  ClientManagerRefactor.md  Contributing.md  FrontendDevManual.md  TauriDevManual.md  TestManual.md
doc/plugin/: cchRewriter.md  claudeCodeTrackingRewriter.md  responsesPromptCacheKeyRewriter.md
doc/protocol/: AnthropicProtocol.md  OpenAiProtocol.md  (+4 more)
frontend/: .env.development  .env.example  .env.tauri  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  splash.html  tsconfig.app.json  vite.config.ts  vitest.config.ts
script/: db.ts  deploy-cloudflare.js  verify_versions.sh
src/: constants.ts  index.ts  local.ts  routes.ts  types.d.ts
tauri/: package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs  window_style.rs
tauri/src-tauri/src/sys/: linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
tests/: config.ts  globalSetup.ts
(+258 files in other folders)
